# salesforce

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  build-plan.md  research.md  review-report.md
docs/runbooks/: connect_scratch_org.md  cutover_advance.md  cutover_rollback.md  jwt_cert_rotation.md  quota_incident.md  reconcile_replay_lag.md
infra/: README.md
infra/helm/offramp/: Chart.yaml  values.yaml
infra/helm/offramp/templates/: _helpers.tpl  cutover-cronjob.yaml  mcp-deployment.yaml  networkpolicy.yaml  shadow-deployment.yaml
infra/operator/: .keep  README.md
infra/operator/manifests/: crd-secretmount.yaml  rbac.yaml
infra/terraform/: .keep
scripts/: benchmark.py  check_matrix_fixtures.py  verify_extract_coverage.py  verify_xray.py
src/offramp/: __init__.py
src/offramp/cli/: __init__.py  __main__.py  cutover.py  extract.py  generate.py  shadow.py  xray.py
src/offramp/core/: __init__.py  config.py  hashing.py  logging.py  models.py  secrets.py  soql.py
src/offramp/cutover/: __init__.py  orchestrator.py  parity_report.py  post_cutover_monitor.py  provenance.py  router.py  saga.py
src/offramp/engram/: __init__.py  client.py
src/offramp/event_bus/: __init__.py  base.py  in_memory.py  redis_streams.py
src/offramp/extract/: __init__.py  audit.py  orchestrator.py
src/offramp/extract/categories/: __init__.py  _passthrough.py  apex_trigger.py  assignment_rule.py  base.py  flow.py  formula_field.py  validation_rule.py  workflow_rule.py  xml_utils.py
src/offramp/extract/dispatch/: __init__.py  class_resolver.py  cmt_reader.py  framework_detectors.py
src/offramp/extract/lwc/: __init__.py  bundle.py
src/offramp/extract/ooe_audit/: __init__.py  audit.py
src/offramp/extract/pull/: __init__.py  base.py  fixture.py  reconciler.py  salto.py  sf_cli.py  tooling_api.py
src/offramp/generate/: __init__.py  dual_target.py  orchestrator.py  tier1.py  tier2.py  tier3.py  translation_matrix.py
src/offramp/generate/adapters/: __init__.py  detector.py  mcp_emitter.py
src/offramp/generate/adapters/hand_tuned/: __init__.py  cpq.py
src/offramp/generate/formula/: __init__.py  emitter.py  parser.py
src/offramp/mcp/: __init__.py  jwt_auth.py  quota.py  routing.py  server.py  sf_backend.py
src/offramp/runtime/: __init__.py
src/offramp/runtime/ooe/: __init__.py  state_machine.py
src/offramp/runtime/rules/: __init__.py  engine.py  formula_runtime.py
src/offramp/understand/: __init__.py  annotate.py  clustering.py  complexity.py  graph_loader.py
src/offramp/understand/orphan/: __init__.py  resolver.py
src/offramp/understand/xray/: __init__.py  render.py
src/offramp/validate/: __init__.py
src/offramp/validate/compare_mode/: __init__.py  log_parser.py  replay_harness.py  state_reconstructor.py
src/offramp/validate/reconcile/: __init__.py  gap_handler.py  lag_monitor.py  resync.py
src/offramp/validate/shadow/: __init__.py  avro_codec.py  categorize.py  cdc_event.py  cdc_schema.py  compliance.py  dashboard.py  data_env.py  diff.py  executor.py  pubsub.py  readiness.py  source.py  store.py  synthetic.py
src/offramp/validate/shadow/pubsub_proto/: __init__.py  pubsub_api.proto  pubsub_api_pb2.py  pubsub_api_pb2_grpc.py
templates/: parity_report.html.j2  shadow_dashboard.html.j2  xray.html.j2
tests/: conftest.py
tests/integration/: test_cutover_dry_run.py  test_extract_e2e.py  test_falkordb_loader.py  test_generate_e2e.py  test_shadow_e2e.py  test_smoke.py  test_xray_e2e.py
tests/integration/fixtures/: synthetic_events.json
tests/load/: test_throughput.py
tests/ooe_runtime/: conftest.py  test_cascade_and_mixed_dml.py  test_once_per_entity_and_scope.py  test_refire.py  test_validation.py
tests/unit/: test_compare_mode_parser.py  test_complexity.py  test_diff_categorize.py  test_dispatch_resolver.py  test_engram_stub.py  test_event_bus.py  test_formula_parser.py  test_hashing.py  test_jwt_auth.py  test_lwc_classifier.py  test_mcp_gateway.py  test_models.py  test_new_tier1_translators.py  test_ooe_audit.py  test_orphan_resolver.py  test_parity_report.py  test_quota_allocator.py  test_reconciler.py  test_resync_injection_defense.py  test_router.py  test_saga.py  test_sf_backend_wiring.py  test_shadow_synthetic.py  test_soql.py  test_translation_matrix.py  test_validation_rule_extractor.py
(+23 files in other folders)
